--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "unistd.h": "c",
+        "glut.h": "c",
+        "math.h": "c",
+        "stdbool.h": "c",
+        "time.h": "c"
     }
 }
